# rindow-operatorovl

./: .gitignore  CMakeLists.txt  CREDITS  README.md  config-mini2.m4  config-none-ac-init.m4  config-old.m4  config.m4  config.w32  gemini.md  install-opoverride.php  packaging.sh  php_rindow_operatorovl.h  php_rindow_opoverride.h  rindow_operatorovl.c  rindow_opoverride.c
.github/workflows/: build.yml
backup/: memo1.md  memo2.md  memo3.md
conf/: 20-rindow_operatorovl.ini  20-rindow_opoverride.ini
debian/: control
src/: Operand.c  Operatable.c  php_rindow_operatorovl.h
tests/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006-php8.1.phpt  006.phpt  007.phpt
